<resources>
    <string name="app_name">ArmySecurity</string>

    <string name="tab_btm_myPage">북마크</string>
    <string name="tab_btm_search">찾아보기</string>
    <string name="tab_btm_event">참여하기</string>

    <string name="search">검색</string>
    <string name="search_detail">상세 검색</string>
    <string name="add">추가</string>
    <string name="close">닫기</string>
    <string name="reset">초기화</string>
    <string name="guide_service">고객센터 : </string>
    <string name="memo">메모</string>
    <string name="remove">삭제하기</string>
    <string name="order">순서</string>
    <string name="save">저장하기</string>

    <string name="guide_page">홈페이지 방문</string>

    <!--    search fragment-->
    <string name="edit">입력</string>
    <string name="filter">검색 조건</string>
    <string name="search_cemetery_title">현충원</string>
    <string name="search_cemetery_sub_title">국가와 민족을 위해 목숨을 바친 영령들이 안장되어 있는 국립묘지로 서울과 대전에 있다.</string>
    <string name="search_guarder_title">호국영령</string>
    <string name="search_guarder_sub_title">국가의 부름을 받고 전장에 나가 천하보다 귀한 자기 목숨을 바쳐 나라를 지키다 희생된 이들을 말한다.</string>
    <string name="cemetery_branch_seoul">서울 현충원</string>
    <string name="cemetery_branch_daejeon">대전 현충원</string>


    <!--    cemetery fragment-->


    <string name="cemetery_field_name">안장자 명</string>
    <string name="cemetery_field_rank">계급</string>
    <string name="cemetery_field_identity">신분</string>
    <string name="cemetery_field_move_date">안장 일자\n(dd/mm/yyyy)</string>
    <string name="cemetery_field_move_plc">안장 위치</string>
    <string name="cemetery_field_death_date">순국 일자\n(dd/mm/yyyy)</string>
    <string name="cemetery_field_death_plc">순국 장소</string>


    <string name="cemetery_field_birthday">생년월일\n(yyyy-mm-dd)</string>
    <string name="cemetery_field_deathday">순국 일자\n(yyyy-mm-dd)</string>
    <string name="cemetery_field_burrday">안장 일자\n(yyyy-mm-dd)</string>
    <string name="cemetery_field_qualification">안장 자격</string>
    <string name="cemetery_field_sn">군번</string>
    <string name="cemetery_field_pname">배우자</string>
    <string name="cemetery_field_loctype">묘역 타입</string>
    <string name="cemetery_field_locname">묘역 명</string>
    <string name="cemetery_field_block">묘역 위치</string>
    <string name="cemetery_field_detaillocation">상세 위치</string>
    <string name="cemetery_field_graveno">묘지 번호</string>


    <!--    event fragment-->
    <string name="event_trip_title">안보견학 현장체험학습</string>
    <string name="event_fly_title">블랙이글스 행사 일정</string>
    <string name="event_war_title">전쟁기념관 정보</string>

    <string name="event_pledge_title">국민의례 행사 진행</string>
    <string name="event_sale_title">병사 할인 혜택 정보</string>

    <!--    WarFragment-->
    <string name="war_field_name">이름</string>
    <string name="war_field_war_name">전투 명</string>
    <string name="war_field_content">내용</string>
    <string name="war_field_date">시기</string>
    <string name="war_field_place">장소</string>
    <string name="war_field_order">지휘관</string>
    <string name="war_field_born">출생지</string>
    <string name="war_field_rank">계급</string>
    <string name="war_field_award">상훈 내역</string>

    <string name="war_field_relics_name">명칭</string>
    <string name="war_field_relics_place">국적</string>
    <string name="war_field_rgmn">연대</string>
    <string name="war_field_obtm">입수처</string>
    <string name="war_field_relafr">관련 사건</string>
    <string name="war_field_chrtrst">특징</string>
    <string name="war_field_wrtmyn">전시 여부\n(Y/N)</string>

    <string name="war_main_title">호국의지\n    함양을 위한 안보교육도장</string>
    <string name="war_main_sub_title">전쟁기념관 | The War Memorial of Korea</string>
    <string name="war_main_content">전쟁기념관은 \'전쟁\'을 단일 주제로 우리나라 5천년 역사를 조망하는 대한민국 대표 전쟁사 종합 박물관이다. 1994년 6월 10일 개관한 이래 호국안보와 상무정신 함양의 도장으로서 연간 200만 명 이상의 내외국인이 찾는 대한민국 대표 명소이기도 하다. 호국추모실, 전쟁역사실, 6·25전쟁실, 해외파병실, 국군발전실, 기증실, 대형장비실 등 7개 실내 전시실과 각종 대형 무기들이 전시되어 있는 옥외 전시장으로 구성되어 있다. 이들 전시실에는 그 옛날 대륙을 석권했던 선조들의 웅혼한 기상으로부터 전 국민이 단결하여 침략자를 응징했던 승전의 역사들, 국력이 쇠잔해져 나라를 빼앗긴 후 이를 되찾기 위해 피맺힌 투쟁을 벌인 역사, 강군으로 성장한 우리 군의 발자취 등이 각종 유물과 영상, 패널, 디오라마, 기록화 등으로 실감나게 재현되어 있다. 대지 면적 116,748㎡에 지하 2층, 지상 4층으로 구성되어 있으며 3만 4천 여 점의 소장품 중 6,300여 점이 전시 중이다. 기념관 전시실 입구 양쪽 회랑에는 창군 이래 나라를 위해 목숨 바친 국군 전사자와 유엔군 전사자를 추모하는 명비가 설치되어 있다.</string>
    <string name="war_main_service_num">02–709–3139</string>
    <string name="war_main_page">https://www.warmemo.or.kr/front/viewInfo/convenient.do</string>

    <!--    Trip Fragment-->
    <string name="trip_field_name">프로그램 명</string>
    <string name="trip_field_prps">목적</string>
    <string name="trip_field_methd">참여 방법</string>
    <string name="trip_field_guide">안내</string>
    <string name="trip_main_title">육군 안보견학 현장체험</string>
    <string name="trip_main_sub_title">안내대상 프로그램</string>
    <string name="trip_main_content">- 공개부대자체 프로그램\n- 작전지역내에 위치한 안보현장\n- 지자체에서 주관하지만 부대와 연관된 프로그램으로 구성</string>


    <!--    Fly Fragment-->
    <string name="fly_field_name">행사 명</string>
    <string name="fly_field_date">행사 시기</string>
    <string name="fly_field_place">행사 장소</string>
    <string name="fly_field_page">홈페이지</string>

    <string name="fly_main_title">Black Eagles</string>
    <string name="fly_main_sub_title">대한민국 공군 특수비행팀, 블랙이글스</string>
    <string name="fly_main_content">블랙이글스는 다양한 특수비행을 통해 공군의 조직적인 팀워크와 고도의 비행기량을 뽐내는 대한민국 특수비행팀입니다.</string>
    <string name="fly_main_guide">* 일정은 행사당일 기상상황에 따라 변경될 수 있습니다.</string>

    <!--    Sale Fragment-->
    <string name="sale_field_rgn">지역</string>
    <string name="sale_field_inst">시설 명</string>
    <string name="sale_field_dcnt">할인 행사 명</string>
    <string name="sale_field_stday">시작일</string>
    <string name="sale_field_fnday">종료일</string>
    <string name="sale_field_cnt">연락처</string>
    <string name="sale_field_detail">상세 설명</string>

<!--    pledge Fragment-->
    <string name="pledge_sound1">국기에 대한 경례</string>
    <string name="pledge_sound2">애국가 제창 (1~4절)</string>
    <string name="pledge_sound3">순국선열 및 호국영령에 대한 묵념</string>


    <!--    안내 메시지-->
    <string name="guide_init_download">최초 데이터 로딩중입니다.</string>
    <string name="input_cemetery_field_name">안장자 명을 입력해주세요.</string>
    <string name="empty_search_data">검색 결과에 해당하는 데이터가 없습니다.</string>

    <!--    에러 메시지-->
    <string name="error_only_digit">정수만 입력해주세요.</string>

    <string-array name="cemetery_field_array">
        <item>@string/cemetery_field_name</item>
        <item>@string/cemetery_field_rank</item>
        <item>@string/cemetery_field_identity</item>
        <item>@string/cemetery_field_move_date</item>
        <item>@string/cemetery_field_move_plc</item>
        <item>@string/cemetery_field_death_date</item>
        <item>@string/cemetery_field_death_plc</item>
    </string-array>
    <string-array name="war_tab">
        <item>전쟁 기념관</item>
        <item>유물 목록</item>
        <item>전쟁 정보</item>
        <item>전쟁 영웅</item>
        <item>찾아오는 길</item>
    </string-array>


    <!--    war feild-->
    <string-array name="war_field_array">
        <item>@string/war_field_war_name</item>
        <item>@string/war_field_place</item>
        <item>@string/war_field_order</item>
    </string-array>
    <string-array name="warman_field_array">
        <item>@string/war_field_name</item>
        <item>@string/war_field_born</item>
        <item>@string/war_field_rank</item>
        <item>@string/war_field_award</item>
    </string-array>
    <string-array name="relics_field_array">
        <item>@string/war_field_relics_name</item>
        <item>@string/war_field_relics_place</item>
        <item>@string/war_field_obtm</item>
        <item>@string/war_field_relafr</item>
        <item>@string/war_field_wrtmyn</item>
    </string-array>

    <string-array name="sale_field_array">
        <item>@string/sale_field_rgn</item>
        <item>@string/sale_field_inst</item>
        <item>@string/sale_field_dcnt</item>
    </string-array>

</resources>