<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event.WarMainPage"
    android:orientation="vertical"
    android:padding="18dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.event.WarMainPage"
    android:orientation="vertical">
    <TextView
        android:text="@string/war_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:layout_marginVertical="18dp"/>
    <TextView
        android:text="@string/war_main_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:text="@string/war_main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <TextView
            android:text="@string/guide_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:text="@string/war_main_service_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        tools:text="@string/guide_page" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:linksClickable="true"
        android:autoLink="web"
        android:textSize="15sp"
        android:layout_marginHorizontal="15dp"
        tools:text="@string/war_main_page" />

</LinearLayout>
    </androidx.core.widget.NestedScrollView>
