<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_margin="48dp">

    <ImageView
        android:id="@+id/close"
        android:layout_gravity="end"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <TextView
        android:text="@string/order"
        style="@style/cemetery_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/order"
        android:text="asdf"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/memo"
        style="@style/cemetery_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/memo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/edit"
        android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center">
        <Button
            android:id="@+id/remove"
            android:text="@string/remove"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"/>
        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="12dp"/>
    </LinearLayout>
</LinearLayout>