<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:text="@string/trip_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryColor"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginVertical="24dp"/>

    <ImageView
        android:src="@drawable/img_trip_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="24dp"
        android:layout_columnWeight="10"/>

    <TextView
        android:text="@string/trip_main_sub_title"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>
    <TextView
        android:text="@string/trip_main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"/>
    <Button
        android:id="@+id/hompage"
        android:text="@string/guide_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="42dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>

</androidx.core.widget.NestedScrollView>